# FLOps-benchmarking

./: .gitignore  README.md  env.example  pyproject.toml  requirements.txt
conf/: config.yaml
conf/dataset/: cifar10.yaml  cifar100.yaml  shakespeare.yaml  tiny_imagenet.yaml
conf/experiment/: tiny_imagenet_100clients.yaml  tiny_imagenet_fedavg.yaml  tiny_imagenet_scaffold.yaml
conf/hardware/: distributed.yaml  simulation.yaml
conf/hardware_experiments/: diws_fhe_iid.yaml  diws_fhe_iid_node_drop_standard.yaml  diws_fhe_niid.yaml  diws_fhe_niid_node_drop_standard.yaml  diws_iid.yaml  diws_iid_node_drop_standard.yaml  diws_niid.yaml  diws_niid_node_drop_standard.yaml
conf/logging/: offline.yaml  wandb.yaml
conf/model/: lstm.yaml  resnet18.yaml  resnet18_gn.yaml  resnet34.yaml  resnet50.yaml  resnet_cifar.yaml  simplecnn.yaml  simplecnn_large.yaml  transformer.yaml  vit.yaml
conf/partitioner/: dirichlet.yaml  dirichlet_high.yaml  dirichlet_medium.yaml  iid.yaml  pathological.yaml
conf/scenario/: baseline.yaml  node_drop.yaml  node_drop_extreme.yaml  node_drop_rolling_10clients.yaml  node_drop_rolling_20clients.yaml  node_drop_rolling_25clients.yaml  (+3 more)
scripts/: __init__.py  compare_experiments.py  generate_experiment_configs.py  plot.py  run_all_experiments.py  run_hardware_experiments.py  sync_fhe_contexts.sh
src/: __init__.py  main.py  run_distributed.py
tenseal/: tenseal-0.3.16-cp311-cp311-linux_aarch64.whl  tenseal-0.3.16-cp313-cp313-linux_aarch64.whl
tests/: test_datasets_loader.py  test_models_forward.py  test_partitioners.py  test_strategies_base.py
(+75 files in other folders)
